--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,9 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     //Dot loader
     implementation 'com.agrawalsuneet.androidlibs:dotsloader:1.4'
 }
